--- a/packages/theme/src/menu.scss
+++ b/packages/theme/src/menu.scss
@@ -9,6 +9,7 @@
   --y-menu-item-height: 42px;
   --y-menu-hover-bg-color: var(--y-color-primary-1);
   --y-menu-active-bg-color: var(--y-color-primary);
+  --y-menu-active-sub-color: var(--y-color-primary);
 }
 
 @include b(menu) {
@@ -20,7 +21,6 @@
   font-size: var(--y-menu-font-size);
   color: var(--y-menu-text-color);
   background-color: var(--y-menu-bg-color);
-  transition: width .3s cubic-bezier(.2,0,0,1) 0s;
 }
 
 @include b(sub-menu) {
@@ -33,6 +33,10 @@
     align-items: center;
     justify-content: space-between;
     cursor: pointer;
+
+    @include when(active) {
+      color: var(--y-menu-active-sub-color);
+    }
 
     &:hover {
       background-color: var(--y-menu-hover-bg-color);
@@ -52,15 +56,16 @@
   display: flex;
   align-items: center;
   height: var(--y-menu-item-height);
-  list-style: none;
   cursor: pointer;
   box-sizing: border-box;
+  list-style: none;
 
   &:hover {
     background-color: var(--y-menu-hover-bg-color);
   }
 
   @include when(active) {
+    color: #fff;
     background-color: var(--y-menu-active-bg-color);
   }
 }
