--- a/packages/theme/src/menu.scss
+++ b/packages/theme/src/menu.scss
@@ -1,6 +1,7 @@
 @use "./mixins/mixins.scss" as *;
 @use "./mixins/function.scss" as *;
 @use "./mixins/utils.scss" as *;
+@use "./common/transition.scss";
 
 @include b(menu) {
   --y-menu-text-color: var(--y-color-text);
@@ -27,19 +28,35 @@
   list-style: none;
 
   @include e(title) {
+    position: relative;
+    display: flex;
     padding-right: 15px;
     height: var(--y-menu-item-height);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     cursor: pointer;
+
+    @include m(content) {
+      flex: 1;
+      z-index: 1;
+      display: flex;
+      height: 100%;
+      align-items: center;
+      justify-content: space-between;
+    }
 
     @include when(active) {
       color: var(--y-menu-active-sub-color);
     }
 
     &:hover {
-      background-color: var(--y-menu-hover-bg-color);
+      &::before{
+        content: "";
+        background-color: var(--y-menu-hover-bg-color);
+        position: absolute;
+        inset: 0 8px;
+        pointer-events: none;
+        border-radius: 5px;
+        transition: background-color .3s cubic-bezier(.4, 0, .2, 1);
+      }
     }
 
     @include m(arrow) {
@@ -52,20 +69,45 @@
 }
 
 @include b(menu-item) {
+  position: relative;
   padding-right: 15px;
   display: flex;
-  align-items: center;
   height: var(--y-menu-item-height);
   cursor: pointer;
   box-sizing: border-box;
   list-style: none;
 
   &:hover {
-    background-color: var(--y-menu-hover-bg-color);
+    &::before{
+      content: "";
+      background-color: var(--y-menu-hover-bg-color);
+      position: absolute;
+      inset: 0 8px;
+      pointer-events: none;
+      border-radius: 5px;
+      transition: background-color .3s cubic-bezier(.4, 0, .2, 1);
+    }
+  }
+
+  @include e(content) {
+    flex: 1;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    z-index: 1;
   }
 
   @include when(active) {
     color: #fff;
-    background-color: var(--y-menu-active-bg-color);
+
+    &::before{
+      content: "";
+      background-color: var(--y-menu-active-bg-color);
+      position: absolute;
+      inset: 0 8px;
+      pointer-events: none;
+      border-radius: 5px;
+      transition: background-color .3s cubic-bezier(.4, 0, .2, 1);
+    }
   }
 }
