--- a/packages/theme/src/menu.scss
+++ b/packages/theme/src/menu.scss
@@ -68,6 +68,10 @@
       @include utils-arrow;
     }
   }
+
+  @include e(children) {
+    border-top: 1px solid transparent;
+  }
 }
 
 @include b(menu-item) {
@@ -78,7 +82,7 @@
   cursor: pointer;
   box-sizing: border-box;
   list-style: none;
-  margin-top: 8px;
+  margin-top: 6px;
 
   &:hover {
     &::before{
