--- a/packages/theme/src/layout.scss
+++ b/packages/theme/src/layout.scss
@@ -5,6 +5,7 @@
   --y-layout-text-color: var(--y-color-text);
   --y-layout-font-size: var(--y-font-size);
   --y-layout-bg-color: var(--y-color-bg-layout);
+  --y-header-height: 64px;
 }
 
 @include b(layout) {
@@ -14,25 +15,36 @@
   background-color: var(--y-layout-bg-color);
   position: relative;
   box-sizing: border-box;
-  min-height: 100vh;
+
+  @include when(absolute) {
+    position: absolute;
+    inset: 0;
+  }
+
+  @include when(sidebar) {
+    flex-direction: row;
+  }
 }
 
 @include b(layout-header) {
   --y-header-bg-color: var(--y-color-bg-container);
   --y-header-border-color: var(--y-color-border-secondary);
 
-  height: 64px;
+  box-sizing: border-box;
+  height: var(--y-header-height);
   line-height: 64px;
   border-bottom: 1px solid var(--y-header-border-color);
   background-color: var(--y-header-bg-color);
 }
 
 @include b(layout-sidebar) {
+  --y-sidebar-width: 250px;
   --y-sidebar-bg-color: var(--y-color-bg-container);
   --y-sidebar-border-color: var(--y-color-border-secondary);
 
-  width: 250px;
-  flex: 1;
+  box-sizing: border-box;
+  width: var(--y-sidebar-width);
+  height: 100%;
   background-color: var(--y-sidebar-bg-color);
   border-right: 1px solid var(--y-header-sidebar-color);
 }
