--- a/packages/theme/src/drawer.scss
+++ b/packages/theme/src/drawer.scss
@@ -41,9 +41,12 @@
 }
 
 .#{$namespace}-drawer-fade {
-  &-enter-active,
+  &-enter-active {
+    transition: all 0.3s cubic-bezier(0, 0, .2, 1);
+  }
+
   &-leave-active {
-    transition: all 0.3s;
+    transition: all 0.2s cubic-bezier(.4, 0, 1, 1);
   }
 
   &-enter-from,
