--- a/packages/theme/src/dropdown.scss
+++ b/packages/theme/src/dropdown.scss
@@ -13,6 +13,8 @@
   @include e(menus) {
     padding: 0;
     margin: 0;
+    box-shadow: var(--y-box-shadow);
+    background-color: var(--y-bg-color-overlay);
   }
 
   @include e(menu) {
