--- a/packages/theme/src/message.scss
+++ b/packages/theme/src/message.scss
@@ -16,7 +16,7 @@
   font-size: var(--y-message-font-size);
   color: var(--y-message-text-color);
   background-color: var(--y-message-bg-color);
-  transition: opacity 0.3s, transform 0.4s, top 0.4s;
+  transition: all 0.3s cubic-bezier(0.78, 0.14, 0.15, 0.86);
   border-radius: 4px;
   box-shadow: 0 3px 6px -4px rgb(0 0 0 / 12%), 0 6px 16px 0 rgb(0 0 0 / 8%), 0 9px 28px 8px rgb(0 0 0 / 5%);
 
@@ -25,8 +25,20 @@
   }
 }
 
-.#{$namespace}-message-fade-enter-from,
-.#{$namespace}-message-fade-leave-to {
+.#{$namespace}-message-fade-enter-from,.#{$namespace}-message-fade-leave-to {
   opacity: 0;
   transform: translate(-50%, -100%);
+}
+
+.#{$namespace}-message-fade-enter-to, .#{$namespace}-message-fade-leave-from {
+  transform: translate(-50%, 0);
+  opacity: 1;
+}
+
+.#{$namespace}-message-fade-enter-active {
+  transition: all 0.3s cubic-bezier(0.78, 0.14, 0.15, 0.86);
+}
+
+.#{$namespace}-message-fade-leave-active {
+  transition: all 0.3s cubic-bezier(0.78, 0.14, 0.15, 0.86);
 }
