--- a/packages/theme/src/button.scss
+++ b/packages/theme/src/button.scss
@@ -6,9 +6,9 @@
 @include b(button) {
   --y-button-text-color: var(--y-color-text);
   --y-button-border-color: var(--y-color-border);
-  --y-button-after-bg-color: var(--y-color-theme);
+  --y-button-before-bg-color: var(--y-color-theme);
   --y-button-after-border-color: var(--y-color-theme);
-  --y-button-hover-text-color: var(--y-base-color);
+  --y-button-hover-text-color: var(--y-color-primary);
   --y-button-hover-bg-color: var(--y-color-primary-1);
   --y-button-hover-border-color: var(--y-color-primary-3);
   --y-button-disabled-opacity: var(--y-disabled-opacity);
@@ -52,28 +52,32 @@
 
   &::after {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 100%;
-    height: 100%;
-    background: var(--y-button-after-bg-color);
-    border: inherit;
-    border-color: var(--y-button-after-border-color);
+    inset: 0;
+    box-sizing: border-box;
     border-radius: inherit;
-    transform: translate(-50%, -50%);
     opacity: 0;
+    transition: .3s;
     content: ' ';
   }
 
-  &:hover,
-  &:focus {
+  &::before {
+    position: absolute;
+    left: -1px;
+    top: -1px;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    border: 1px solid var(--y-button-after-border-color);
+    background-color: var(--y-button-before-bg-color);
+    content: ' ';
+  }
+
+  &:hover {
     &:not(.is-disabled) {
       transition: all .2s cubic-bezier(.645,.045,.355,1);
       color: get-css-var('button', 'hover', 'text-color');
       border-color: get-css-var('button', 'hover', 'border-color');
-      background-color: get-css-var('button', 'hover', 'bg-color');
       outline: none;
-
     }
   }
 
@@ -91,18 +95,6 @@
     opacity: get-css-var('button', 'disabled', 'opacity');
   }
 
-  @include when(loading) {
-    pointer-events: none;
-    position: relative;
-
-    &::before {
-      content: "";
-
-      @include loading(12px, 12px);
-
-    }
-  }
-
   @each $type in (primary, success, warning, error, info) {
     @include when($type) {
       &:not(.is-plain) {
@@ -110,8 +102,18 @@
         background-color: get-css-var('button', $type, 'bg-color');
         color: get-css-var('button', $type, 'text-color');
   
-        &:active::after, &:hover::after {
-          &:not(.is-disabled) {
+        &:not(.is-disabled) {
+          &::after {
+            box-shadow: 0 0 0 8px get-css-var('button', $type, 'border-color');
+          }
+
+          &:active::after {
+            box-shadow: none;
+            opacity: 0.8;
+            transition: 0s;
+          }
+
+          &:hover::before {
             opacity: 0.2;
           }
         }
@@ -121,10 +123,19 @@
         border-color: get-css-var('button', $type, 'border-color');
         color: get-css-var('button', $type, 'bg-color');
 
-        &:active, &:hover {
-          &:not(.is-disabled) {
-            color: get-css-var('button', $type, 'text-color');
-            background-color: get-css-var('button', $type, 'bg-color');
+        &:not(.is-disabled) {
+          &::after {
+            box-shadow: 0 0 0 8px get-css-var('button', $type, 'border-color');
+          }
+
+          &:active::after {
+            box-shadow: none;
+            opacity: 0.8;
+            transition: 0s;
+          }
+
+          &:hover::before {
+            opacity: 0.2;
           }
         }
       }
@@ -146,5 +157,17 @@
   @include when(block) {
     display: block;
     width: 100%;
+  }
+
+  .is-loading {
+    display: block;
+    margin-right: 5px;
+
+    &::after {
+      display: block;
+      content: " ";
+
+      @include loading(12px, 12px)
+    }
   }
 }
